--- a/i18n/fr_FR/measuretool.po
+++ b/i18n/fr_FR/measuretool.po
@@ -1,83 +1,83 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Measure Tool package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 5axes <5axes@free.fr>, 2023.
 msgid ""
 msgstr ""
 "Project-Id-Version: Measure Tool\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-05-03 13:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2023-01-18 15:50+0200\n"
+"Last-Translator: 5axes <5axes@free.fr>\n"
+"Language-Team: 5axes\n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #: MeasureTool.py:127 __init__.py:26
 msgctxt "@label"
 msgid "Measure"
-msgstr ""
+msgstr "Mesure"
 
 #: __init__.py:28
 msgctxt "@info:tooltip"
 msgid "Measure parts of objects."
-msgstr ""
+msgstr "Mesurer des dimmensions d'objets."
 
 #: resources/qml_qt5/MeasureTool.qml:60 resources/qml/MeasureTool.qml:61
 msgctxt "@label"
 msgid "From"
-msgstr ""
+msgstr "De"
 
 #: resources/qml_qt5/MeasureTool.qml:71 resources/qml/MeasureTool.qml:72
 msgctxt "@label"
 msgid "To"
-msgstr ""
+msgstr "A"
 
 #: resources/qml_qt5/MeasureTool.qml:82 resources/qml/MeasureTool.qml:83
 msgctxt "@label"
 msgid "Distance"
-msgstr ""
+msgstr "Distance"
 
 #: resources/qml_qt5/MeasureTool.qml:218 resources/qml/MeasureTool.qml:203
 msgctxt "@label"
 msgid "Diagonal"
-msgstr ""
+msgstr "Diagonale"
 
 #: resources/qml_qt5/MeasureTool.qml:241 resources/qml/MeasureTool.qml:223
 msgctxt "@label"
 msgid "Unit"
-msgstr ""
+msgstr "Unité"
 
 #: resources/qml_qt5/MeasureTool.qml:253 resources/qml/MeasureTool.qml:233
 msgctxt "@option:unit"
 msgid "Micron"
-msgstr ""
+msgstr "Micron"
 
 #: resources/qml_qt5/MeasureTool.qml:254 resources/qml/MeasureTool.qml:234
 msgctxt "@option:unit"
 msgid "Millimeter (default)"
-msgstr ""
+msgstr "Millimètre (défaut)"
 
 #: resources/qml_qt5/MeasureTool.qml:255 resources/qml/MeasureTool.qml:235
 msgctxt "@option:unit"
 msgid "Centimeter"
-msgstr ""
+msgstr "Centimètre"
 
 #: resources/qml_qt5/MeasureTool.qml:256 resources/qml/MeasureTool.qml:236
 msgctxt "@option:unit"
 msgid "Meter"
-msgstr ""
+msgstr "Mètre"
 
 #: resources/qml_qt5/MeasureTool.qml:257 resources/qml/MeasureTool.qml:237
 msgctxt "@option:unit"
 msgid "Inch"
-msgstr ""
+msgstr "Pouce"
 
 #: resources/qml_qt5/MeasureTool.qml:258 resources/qml/MeasureTool.qml:238
 msgctxt "@option:unit"
 msgid "Feet"
-msgstr ""
+msgstr "Pied"
